030-software/fluxcd/apps/buzz-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buzz-web
  annotations:
    configmap.reloader.stakater.com/reload: "buzz-web-config"
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: buzz-web
  template:
    metadata:
      labels:
        app: buzz-web
        policy.gatekeeper.sh/ignore-psp-volume-types: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: buzz-web
      containers:
        - name: buzz-web
          image: caddy:2.10.2-alpine@sha256:4c6e91c6ed0e2fa03efd5b44747b625fec79bc9cd06ac5235a779726618e530d
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /app/healthz
              port: http
          livenessProbe:
            httpGet:
              path: /app/healthz
              port: http
          readinessProbe:
            httpGet:
              path: /app/healthz
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: assets
              mountPath: /srv/app
            - name: config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
              readOnly: true
            - name: config
              mountPath: /srv/app/config.json
              subPath: config.json
              readOnly: true
            - name: caddy-config
              mountPath: /config
            - name: caddy-data
              mountPath: /data
      volumes:
        - name: assets
          emptyDir:
            sizeLimit: 128Mi
        - name: build
          emptyDir:
            sizeLimit: 512Mi
        - name: source
          emptyDir:
            sizeLimit: 1Gi
        - name: config
          configMap:
            name: buzz-web-config
        - name: caddy-config
          emptyDir:
            medium: Memory
            sizeLimit: 1Mi
        - name: caddy-data
          emptyDir:
            medium: Memory
            sizeLimit: 1Mi
