030-software/fluxcd/apps/buzz-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: buzz-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: buzz-web
